--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,63 @@
-// TODO
+.homeMainContainer {
+  max-width: 25rem;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  .postPreviewList {
+    list-style-type: none;
+    margin-top: 2rem;
+
+    & + .postPreviewContainer {
+      margin: 1.5rem 0;
+    }
+
+    .postPreviewContent {
+
+      .postPreviewTitle {
+        font-size: 1.75rem;
+        font-weight: 700;
+      }
+
+      .postPreviewText {
+        margin-top: .5rem;
+        font-size: 1.125rem;
+      }
+    }
+
+    .postPreviewInfo {
+      margin-top: 1.5rem;
+      width: 75%;
+      display: flex;
+      align-items: flex-start;
+      justify-content: space-between;
+
+      .postPreviewDate,
+      .postPreviewAuthorInfo {
+        display: flex;
+
+        time,
+        p {
+          margin-left: .5rem;
+        }
+      }
+    }
+  }
+
+  .loadPostsContainer {
+    align-self: flex-start;
+    margin-top: 2.125rem;
+
+    .loadPostsButtonContainer {
+      .loadPostsButton {
+        background-color: transparent;
+        border: none;
+        font-size: 1.125rem;
+        font-weight: 600;
+        color: var(--highlight);
+      }
+    }
+  }
+}
