--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,13 +1,27 @@
 .header {
-  width: 100%;
+  max-width: 25rem;
   padding-top: 2.5rem;
+  margin: 0 auto;
+
+  @media screen and (min-width: 1024px) {
+    max-width: 70rem;
+  }
 
   .headerContent {
     display: flex;
     justify-content: flex-start;
     align-items: center;
 
+    h1 {
+      margin-left: .5rem;
+
+      @media screen and (min-width: 1024px) {
+        margin-left: 1rem;
+      }
+    }
+
     .dot {
+      margin-left: 0;
       color: var(--highlight);
     }
   }
