--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -6,41 +6,74 @@
   align-items: center;
   justify-content: center;
 
+  @media screen and (min-width: 1024px) {
+    max-width: 70rem;
+  }
+
   .postPreviewList {
     list-style-type: none;
+    margin: 0 auto;
     margin-top: 2rem;
+    width: 100%;
+
+    @media screen and (min-width: 1024px) {
+      margin-top: 4rem;
+    }
 
     & + .postPreviewContainer {
       margin: 1.5rem 0;
     }
 
     .postPreviewContent {
-
       .postPreviewTitle {
-        font-size: 1.75rem;
+        font-size: 1.125rem;
         font-weight: 700;
+
+        @media screen and (min-width: 1024px) {
+          font-size: 1.75rem;
+        }
       }
 
       .postPreviewText {
-        margin-top: .5rem;
-        font-size: 1.125rem;
+        margin-top: 0.5rem;
+        font-size: 1rem;
+
+        @media screen and (min-width: 1024px) {
+          font-size: 1.125rem;
+        }
       }
     }
 
     .postPreviewInfo {
-      margin-top: 1.5rem;
+      margin-top: 0.75rem;
       width: 75%;
       display: flex;
       align-items: flex-start;
       justify-content: space-between;
 
+      @media screen and (min-width: 1024px) {
+        margin-top: 1.5rem;
+        justify-content: flex-start;
+      }
+
       .postPreviewDate,
       .postPreviewAuthorInfo {
         display: flex;
 
+        @media screen and (min-width: 1024px) {
+          & + div {
+            margin-left: 1.5rem;
+          }
+        }
+
         time,
         p {
-          margin-left: .5rem;
+          font-size: 0.75rem;
+          margin-left: 0.5rem;
+
+          @media screen and (min-width: 1024px) {
+            font-size: 0.875rem;
+          }
         }
       }
     }
@@ -48,15 +81,23 @@
 
   .loadPostsContainer {
     align-self: flex-start;
-    margin-top: 2.125rem;
+    margin-top: 1.25rem;
+
+    @media screen and (min-width: 1024px) {
+      margin-top: 2.125rem;
+    }
 
     .loadPostsButtonContainer {
       .loadPostsButton {
         background-color: transparent;
         border: none;
-        font-size: 1.125rem;
+        font-size: 1rem;
         font-weight: 600;
         color: var(--highlight);
+
+        @media screen and (min-width: 1024px) {
+          font-size: 1.125rem;
+        }
       }
     }
   }
