--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,6 +1,6 @@
 .header {
   max-width: 25rem;
-  padding-top: 2.5rem;
+  padding: 1.25rem 0;
   margin: 0 auto;
 
   @media screen and (min-width: 1024px) {
